# system_analysis_backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
documentation/: class.puml  component.puml  db_description.puml  sequence.puml
src/frameworks_and_drivers/django/backend/: settings.py
src/frameworks_and_drivers/django/gpt_integration/: gpt_service.py  models.py  views.py
src/frameworks_and_drivers/django/posts/: admin.py  models.py
src/frameworks_and_drivers/django/users/: admin.py  models.py
src/frameworks_and_drivers/repositories_implementations/: post_repo.py
src/interface_adapters/repositories_interfaces/: post_repo.py
